--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body{
     padding: 0 auto;
     background-attachment: fixed;
-    margin-left: 30%;
-    margin-top: 500px;
+    margin-left: 40%;
+    margin-top: 40%;
 }
