--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body{
     padding: 0 auto;
     background-attachment: fixed;
-    margin-left: 40%;
+    margin-left: 35%;
+    margin-top: 40px;
 }
