--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body{
     padding: 0 auto;
     background-attachment: fixed;
-    margin-left: 35%;
-    margin-top: 40px;
+    margin-left: 25%;
+    margin-top: 20%;
 }
